@@ -7,7 +7,7 @@
     <artifactId>openmldb-parent</artifactId>
     <packaging>pom</packaging>
     <name>openmldb</name>
-    <version>0.8.4-SNAPSHOT</version>
+    <version>0.9.3-SNAPSHOT</version>
     <modules>
         <module>hybridse-sdk</module>
         <module>hybridse-native</module>
@@ -50,7 +50,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <scala.version>2.12.8</scala.version>
+        <scala.version>2.12.15</scala.version>
         <scala.binary.version>2.12</scala.binary.version>
         <spark.version>3.2.1</spark.version>
         <hadoop.version>3.3.1</hadoop.version>
@@ -65,7 +65,7 @@
         <!-- the version for hybridse-native & openmldb-native
              override this to publish a variant release e.g. macOS variant
              checkout java/prepare_release.sh how to prepare a variant release -->
-        <variant.native.version>0.8.4-SNAPSHOT</variant.native.version>
+        <variant.native.version>0.9.3-SNAPSHOT</variant.native.version>
 
         <plugin.violationSeverity>error</plugin.violationSeverity>
         <spotless-maven-plugin.version>2.9.0</spotless-maven-plugin.version>
@@ -122,9 +122,17 @@
                 <artifactId>git-commit-id-plugin</artifactId>
             </plugin>
             <plugin>
-                <!-- deploy to sonatype -->
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.8.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <publishingServerId>ossrh</publishingServerId>
+                    <autoPublish>true</autoPublish>
+                    <!--
+                    <waitUntil>published</waitUntil>
+                    -->
+                </configuration>
             </plugin>
             <plugin>
                 <!-- create jar with source code -->
@@ -294,7 +302,7 @@
                     <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                     <junitxml>.</junitxml>
                     <filereports>WDF TestSuite.txt</filereports>
-                    <argLine>-Xmx8192m -XX:MaxPermSize=2048m -Duser.timezone=GMT+8</argLine>
+                    <argLine>-Xmx8192m -XX:MaxMetaspaceSize=2048m -Duser.timezone=GMT+8</argLine>
                     <skipTests>${scalatest.skip}</skipTests>
                     <systemProperties>
                         <property>
@@ -480,11 +488,11 @@
   <distributionManagement>
     <snapshotRepository>
         <id>ossrh</id>
-        <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        <url>https://central.sonatype.com/repository/maven-snapshots/</url>
     </snapshotRepository>
     <repository>
         <id>ossrh</id>
-        <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+	<url>https://central.sonatype.com</url>
     </repository>
   </distributionManagement>
 </project>
